# Boost-for-Android

./: .drone.yml  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README  README.md  build-android.bat  build-android.sh  build-common.sh  build.gradle  common.gradle  copy-files.sh  gradle.properties  install-common.sh  install.sh  properties.gradle  publishing.gradle  relocate-boost.sh
.github/workflows/: ci.yml
configs/: user-config-arm-boost-1_53_0.jam  user-config-boost-1_53_0.jam  user-config-boost-1_55_0.jam  user-config-boost-1_56_0.jam  user-config-boost-1_65_1-arm64-v8a.jam  user-config-boost-1_65_1-armeabi-v7a.jam  user-config-boost-1_65_1-armeabi.jam  user-config-boost-1_65_1-mips.jam  user-config-boost-1_65_1-mips64.jam  user-config-boost-1_65_1-x86.jam  user-config-boost-1_65_1-x86_64.jam  user-config-boost-1_65_1.jam  user-config-boost-1_66_0-arm64-v8a.jam  user-config-boost-1_66_0-armeabi.jam  user-config-boost-1_66_0-common.jam  user-config-boost-1_66_0-mips.jam  user-config-boost-1_66_0-mips64.jam  user-config-boost-1_66_0-x86.jam  user-config-boost-1_66_0-x86_64.jam  user-config-boost-1_67_0.jam  user-config-boost-1_70_0-armeabi-v7a.jam  user-config-boost-1_70_0-mips.jam  user-config-i686-boost-1_53_0.jam  user-config-ndk19-1_64_0-common.jam  user-config-ndk19-1_64_0.jam  user-config-ndk19-1_69_0-common.jam  user-config-ndk19-1_69_0.jam  user-config-ndk19-1_70_0-common.jam  user-config-ndk19-1_70_0.jam  user-config-ndk23-1_74_0-common.jam  user-config-ndk23-1_76_0-armeabi-v7a.jam  user-config-ndk23-1_77_0-common.jam  user-config-ndk23-1_82_0-common.jam  user-config-ndk23-1_91_0.jam  user-config-python.jam  user-config-x86_64-boost-1_53_0.jam
configs/boost-1_51_0/: user-config-armeabi-v7a.jam  user-config-armeabi.jam  user-config-x86.jam
patches/: 001-boost-for-android.patch  002-android-toolset.patch  003-headers.patch  004-build-userconfig.patch  005-headers2.patch  endian.hpp.diff  user-config.jam.patch  user.hpp.patch
patches-1_45_0/: project-config.jam.patch  user-config.jam.patch  user.hpp.patch
patches-1_48_0/: boost-1_48_0.patch
patches/boost-1_45_0/ndk-androidR4/: user-config.jam.patch
patches/boost-1_45_0/ndk-androidR5/: user-config.jam.patch
patches/boost-1_45_0/ndk-androidR7-crystax-5.beta3/: user-config.jam.patch
patches/boost-1_45_0/ndk-androidR8/: user-config.jam.patch
patches/boost-1_48_0/: boost-1_48_0.patch
patches/boost-1_48_0/ndk-androidR7/: user-config.jam.patch
patches/boost-1_48_0/ndk-androidR8/: user-config.jam.patch
patches/boost-1_48_0/ndk-androidR8b/: user-config.jam.patch
patches/boost-1_49_0/: boost-1_49_0.patch  ndk-androidR7  ndk-androidR7-crystax-5.beta3  ndk-androidR8  ndk-androidR8d
patches/boost-1_49_0/ndk-androidR8e/: user-config.jam.patch
patches/boost-1_51_0/: boost-1_51_0.patch
patches/boost-1_53_0/: boost-1_53_0.patch
patches/boost-1_54_0/: boost-1_54_0.patch
patches/boost-1_55_0/: boost-1_55_0.patch
patches/boost-1_56_0/: boost-1_56_0.patch
patches/boost-1_64_0/: boost-1_64_0.patch
patches/boost-1_65_1/: boost-1_65_1.patch
patches/boost-1_66_0/: boost-1_66_0.patch
patches/boost-1_67_0/: boost-1_67_0.patch
patches/boost-1_68_0/: boost-1_68_0.patch
patches/boost-1_69_0/: boost-1_69_0.patch
patches/boost-1_70_0/: 1-70-0-beast-fix-moved-from-executor.patch  boost-1.70.0.patch
patches/boost-1_71_0/: boost-1.71.0.patch
patches/boost-1_73_0/: boost-1.73.0.patch
patches/boost-1_74_0/: boost-1.74.0.patch
patches/boost-1_76_0/: boost-1.76.0.patch
patches/boost-1_77_0/: boost-1.77.0.patch
patches/boost-1_78_0/: boost-1.78.0.patch
patches/boost-1_79_0/: boost-1.79.0.patch
patches/boost-1_80_0/: boost-1.80.0.patch
patches/boost-1_82_0/: boost-1.82.0.patch
patches/boost-1_83_0/: boost-1.83.0.patch
patches/boost-1_84_0/: boost-1.84.0.patch
patches/boost-1_85_0/: boost-1_85_0.patch
patches/boost-1_86_0/: boost-1_86_0.patch
patches/boost-1_87_0/: boost-1_87_0.patch
patches/boost-1_88_0/: boost-1_88_0.patch
patches/boost-1_89_0/: boost-1_89_0.patch
patches/boost-1_90_0/: boost-1_90_0.patch
patches/boost-1_91_0/: boost-1_91_0.patch
